콘텐츠 버전체크까지 완료 로그인로직과 충돌테스트해야함

--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -11,5 +11,9 @@
         android:layout_centerInParent="true"
         android:text="마을리스트"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
+    <ListView
+        android:id="@+id/listview1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
