마을리스트 파일에서 읽어오는 로직까진 완료 스탬프여부 받아와서 데이터 합치는 로직 추가해야함

--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -12,7 +12,7 @@
         android:text="마을리스트"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
     <ListView
-        android:id="@+id/listview1"
+        android:id="@+id/TownListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
