--- a/app/src/main/res/layout/tab_fragment_4.xml
+++ b/app/src/main/res/layout/tab_fragment_4.xml
@@ -2,14 +2,178 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/stdColorWhite"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="더보기"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbarStyle="outsideOverlay">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:gravity="start"
+            android:id="@+id/more_fragment_container">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/account_view_container">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/account_view_container_iconview"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/account_view_container_iconview"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="30dp"
+                    android:textColor="@color/colorFaceBookBtn"
+                    android:text="@string/account_view_container"
+                    android:textSize="30sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/account_view_container_iconview"
+                    android:orientation="horizontal"
+                    android:id="@+id/more_fragment_container_line_account"
+                    android:background="@color/cardview_dark_background">
+                </LinearLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:layout_below="@id/account_view_container"
+                android:id="@+id/hidemanage_view_container">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/hidemanage_view_container_iconview"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/hidemanage_view_container_iconview"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="30dp"
+                    android:textColor="@color/colorFaceBookBtn"
+                    android:text="@string/hidemanage_view_container"
+                    android:textSize="30sp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/hidemanage_view_container_iconview"
+                    android:orientation="horizontal"
+                    android:id="@+id/more_fragment_container_line_hidemanage"
+                    android:background="@color/cardview_dark_background">
+                </LinearLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/hidemanage_view_container"
+                android:id="@+id/present_view_container">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/present_view_container_iconview"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/present_view_container_iconview"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="30dp"
+                    android:text="@string/present_view_container"
+                    android:textColor="@color/colorFaceBookBtn"
+                    android:textSize="30sp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/present_view_container_iconview"
+                    android:orientation="horizontal"
+                    android:id="@+id/more_fragment_container_line_present"
+                    android:background="@color/cardview_dark_background">
+                </LinearLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/present_view_container"
+                android:id="@+id/research_view_container">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/research_view_container_iconview"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/research_view_container_iconview"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="30dp"
+                    android:text="@string/research_view_container"
+                    android:textColor="@color/colorFaceBookBtn"
+                    android:textSize="30sp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/research_view_container_iconview"
+                    android:orientation="horizontal"
+                    android:id="@+id/more_fragment_container_line_research"
+                    android:background="@color/cardview_dark_background">
+                </LinearLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:layout_marginBottom="20dp"
+                android:layout_below="@id/research_view_container"
+                android:id="@+id/logout_view_container">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/logout_view_container_iconview"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/logout_view_container_iconview"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="30dp"
+                    android:text="@string/logout_view_container"
+                    android:textColor="@color/colorFaceBookBtn"
+                    android:textSize="30sp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/logout_view_container_iconview"
+                    android:orientation="horizontal"
+                    android:id="@+id/more_fragment_container_line_logout"
+                    android:background="@color/cardview_dark_background">
+                </LinearLayout>
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
