--- a/app/src/main/res/layout/tab_fragment_4.xml
+++ b/app/src/main/res/layout/tab_fragment_4.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/stdColorWhite"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -176,4 +176,4 @@
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
