--- a/app/src/main/res/layout/townlistitem.xml
+++ b/app/src/main/res/layout/townlistitem.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/town_img_view"
