gps service 작성중 -1 Gps TurnOn, Off 체크 및 로케이션 변경 리스너 작업완료(서비스가 많아서 프로세스 분리해야할 수 있음)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,9 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@color/common_bg_color2"
         />
-    <LinearLayout
-        android:id="@+id/horizontal_line2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/pager"
-        android:orientation="horizontal"
-        android:background="@color/com_facebook_blue" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         app:tabMode="fixed"
@@ -31,6 +25,11 @@
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-
+    <LinearLayout
+        android:id="@+id/horizontal_line2"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_above="@id/tab_layout"
+        android:orientation="horizontal"
+        android:background="@color/com_facebook_blue" />
 </RelativeLayout>
