--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,25 +3,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_bg_color1"
     tools:context="com.thatzit.kjw.stamptour_kyj_client.splash.SplashActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/cardview_dark_background"
+        android:fillViewport="true"
         android:scrollbarStyle="outsideOverlay">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="@color/stdColorWhite"
+            >
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:background="@mipmap/img"
+                android:layout_width="@dimen/logo_horizontal_size"
+                android:layout_height="@dimen/logo_vertical_size"
+                android:layout_marginTop="@dimen/logo_top_margin"
+                android:layout_centerInParent="true"
+                android:background="@drawable/img_splash_logo"
                 android:id="@+id/splashAnimation"
-                android:scaleType="fitCenter"/>
-        </LinearLayout>
-
+                android:scaleType="fitCenter"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:text="MADE WITH THATZIT"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:textColor="#B4B4B4"
+                android:textAlignment="center"
+                android:id="@+id/logo_subtitle"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_above="@id/logo_subtitle"
+                android:layout_marginBottom="10dp"
+                android:text="©2016.GYEONGJU"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:textColor="#303030"
+                android:textAlignment="center"
+                android:id="@+id/logo_title"
+                />
+        </RelativeLayout>
     </ScrollView>
-
-
 </RelativeLayout>
