--- a/app/src/main/res/layout/townlistheader.xml
+++ b/app/src/main/res/layout/townlistheader.xml
@@ -1,24 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
         android:id="@+id/firstline_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="홍길동은 성골 등급입니다."
         android:textSize="16dp"
         android:textColor="#FFFFFF"
+        android:textAlignment="center"
         />
-
-    <TextView
-        android:id="@+id/secondline_text_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="찍은 스탬프 12(선물 신청까지 2개 남음)"
-        android:textSize="16dp"
-        android:textColor="#FFFFFF"
-        />
+        android:orientation="horizontal"
+        android:layout_marginTop="80dp"
+        android:layout_below="@id/firstline_text_view"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/secondline_cnt_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="12"
+                android:textSize="21sp"
+                android:textStyle="bold"
+                android:textColor="@color/toolbar_cnt_text_color"
+                android:textAlignment="center"
+                />
+            <TextView
+                android:id="@+id/secondline_text_view"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="찍은 스탬프"
+                android:textStyle="normal"
+                android:textSize="13sp"
+                android:textColor="@color/toolbar_second_text_color"
+                android:textAlignment="center"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/secondline_nextcnt_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="03"
+                android:textSize="21sp"
+                android:textStyle="bold"
+                android:textColor="@color/toolbar_cnt_text_color"
+                android:textAlignment="center"
+                />
+            <TextView
+                android:id="@+id/secondline_nexttext_view"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="다음 선물까지"
+                android:textStyle="normal"
+                android:textSize="13sp"
+                android:textColor="@color/toolbar_second_text_color"
+                android:textAlignment="center"
+                />
+        </LinearLayout>
 
-</LinearLayout>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
