--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.thatzit.kjw.stamptour_kyj_client.main.MainActivity">
     <!--<item-->
-        <!--android:id="@+id/action_settings"-->
+        <!--android:id="@+id/action_sort"-->
         <!--android:orderInCategory="100"-->
-        <!--android:showAsAction="never"-->
-        <!--android:title="@string/action_settings" />-->
+        <!--android:title="정렬"-->
+        <!--app:showAsAction="ifRoom"></item>-->
+
 </menu>
