--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,14 @@
     <dimen name="Login_Social_layout_vertical_margin">30dp</dimen>
     <dimen name="JoinandFidLayout_vertical_margin">100dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!-- AnimateToolbar Fragment in Recycler View list dimen Resouce-->
+    <dimen name="stamp_list_item_text_name_dimen">16sp</dimen>
+    <dimen name="stamp_list_item_text_region_dimen">14sp</dimen>
+    <dimen name="stamp_list_item_text_distance_dimen">13sp</dimen>
+
+    <!-- SplashActivity dimen Resouce -->
+    <dimen name="logo_horizontal_size">100dp</dimen>
+    <dimen name="logo_vertical_size">100dp</dimen>
+    <dimen name="logo_top_margin">224dp</dimen>
 </resources>
