리스트 정렬로직 작업  -2 마을이름,권역별 정렬 로직작업 완료 지자체별로 필요없는 로직은 삭제해야함

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -50,13 +50,14 @@
                         android:layout_height="16dp"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:text="숨김관리"
+                        android:id="@+id/hide_btn"
+                        android:text="@string/hide_btn"
                         android:textSize="14sp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="16dp"
                         android:layout_centerInParent="true"
-                        android:text="스탬프"
+                        android:text="@string/main_toolbar_title"
                         android:textSize="14sp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -64,7 +65,8 @@
                         android:layout_marginRight="16dp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:text="정렬"
+                        android:id="@+id/sort_btn"
+                        android:text="@string/sort_btn"
                         android:textSize="14sp"/>
                 </RelativeLayout>
 
