--- a/app/src/main/res/drawable/selecteditem_dot.xml
+++ b/app/src/main/res/drawable/selecteditem_dot.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" android:useLevel="true"
     android:dither="true">
-    <size android:height="12dip" android:width="12dip"/>
-    <solid android:color="@color/colorPrimary"/>
+    <size android:height="7dp" android:width="7dp"/>
+    <solid android:color="@color/image_indicator_selected_color" />
 </shape>
