--- a/app/src/main/res/layout/image_fragment.xml
+++ b/app/src/main/res/layout/image_fragment.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:id="@+id/pager_img"/>
 </LinearLayout>
