--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="JoinandFidLayout_vertical_margin">100dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 
-    <!-- MainFragment Fragment in Recycler View list dimen Resource-->
+    <!-- MainFragment Fragment in Recycler View list dimen Resource -->
     <dimen name="stamp_list_item_text_name_dimen">16sp</dimen>
     <dimen name="stamp_list_item_text_region_dimen">14sp</dimen>
     <dimen name="stamp_list_item_text_distance_dimen">13sp</dimen>
@@ -17,8 +17,19 @@
     <dimen name="logo_vertical_size">100dp</dimen>
     <dimen name="logo_top_margin">224dp</dimen>
 
-    <!-- MainFragment Toolbar Custom popup dimen Resource-->
+    <!-- MainFragment Toolbar Custom popup dimen Resource -->
     <dimen name="popup_width">150dp</dimen>
     <dimen name="popup_height">150dp</dimen>
     <dimen name="popup_item_height">40dp</dimen>
+    <!-- ImageFragment Pager dimen Resource -->
+    <dimen name="image_pager_height">270dp</dimen>
+    <!-- ImageFragment Indicator dimen Resource -->
+    <dimen name="image_indicator_padding">10dip</dimen>
+    <!-- ImageFragment TextView dimen Resource -->
+    <dimen name="image_description_text_size">16sp</dimen>
+    <dimen name="image_description_textview_margin_top">35dp</dimen>
+    <dimen name="image_description_textview_margin_left">16dp</dimen>
+    <dimen name="image_description_contents_text_size">16sp</dimen>
+    <dimen name="image_description_text_linespace">30dip</dimen>
+    <dimen name="image_description_contents_text_margin_top">30dp</dimen>
 </resources>
