--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -93,5 +93,11 @@
         android:background="@color/common_bg_color2"
         android:layout_marginBottom="64dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+        <ProgressBar
+            android:id="@+id/list_progressbar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"/>
 </android.support.design.widget.CoordinatorLayout>
