스탬프 체크여부 서버 API 연결중 - 2 MainFrgment에서 서비스로 부터 location change이벤트 받을 때 프리퍼런스 초기화 컨텍스트 변경 및 MainAcitivity에서 MainFragment,MapFragment에 사용되는 데이터 전처리

--- a/app/src/main/res/layout/comm_progress.xml
+++ b/app/src/main/res/layout/comm_progress.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ProgressBar android:id="@+id/wait_progress"
-    android:progressDrawable="@drawable/list_progress_style"
+    style="?android:progressBarStyleSmall"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
