--- a/app/src/main/res/drawable/list_progress_style.xml
+++ b/app/src/main/res/drawable/list_progress_style.xml
@@ -1,30 +1,45 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- Define the background properties like color etc -->
     <item android:id="@android:id/background">
         <shape>
+            <corners android:radius="5dip" />
             <gradient
-                android:startColor="#000001"
-                android:centerColor="#0b131e"
-                android:centerY="1.0"
-                android:endColor="#0d1522"
+                android:startColor="#F5A9F2"
+                android:centerColor="#F5A9F2"
+                android:centerY="0.75"
+                android:endColor="#F5A9F2"
                 android:angle="270"
                 />
         </shape>
     </item>
 
-    <!-- Define the progress properties like start color, end color etc -->
-    <item android:id="@android:id/progress">
+    <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
+                <corners android:radius="5dip" />
                 <gradient
-                    android:startColor="#007A00"
-                    android:centerColor="#007A00"
-                    android:centerY="1.0"
-                    android:endColor="#06101d"
+                    android:startColor="#80ffd300"
+                    android:centerColor="#80ffb600"
+                    android:centerY="0.75"
+                    android:endColor="#a0ffcb00"
                     android:angle="270"
                     />
             </shape>
         </clip>
     </item>
+    <item
+        android:id="@android:id/progress"
+        >
+        <clip>
+            <shape>
+                <corners
+                    android:radius="5dip" />
+                <gradient
+                    android:startColor="#33FF33"
+                    android:endColor="#008000"
+                    android:angle="270" />
+            </shape>
+        </clip>
+    </item>
+
 </layer-list>
