스탬프 체크여부 서버 API 연결중 - 2 Application컨텍스트로 통일 Preference 초기화작업에만 종종 Context를 잃어버려서 및 더보기 화면레이아웃 작업완료

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,4 +51,5 @@
     <color name="town_subtitle_text_color">#000000</color>
     <color name="image_description_contents_text_color">#000000</color>
     <color name="image_indicator_selected_color">#00CCCC</color>
+    <color name="common_line_color">#ceced2</color>
 </resources>
