latitud,longitude로 계산한 distance 기준 push notification 까지

--- a/app/src/main/res/drawable/town_list_item_bg_on.xml
+++ b/app/src/main/res/drawable/town_list_item_bg_on.xml
@@ -4,7 +4,7 @@
         android:shape="rectangle"
         >
         <gradient
-            android:startColor="#ffffff"
-            android:endColor="#ffffff"
+            android:startColor="#0066cc"
+            android:endColor="#00cccc"
             android:angle="0" />
     </shape>
