--- a/app/src/main/res/layout/townlistheader.xml
+++ b/app/src/main/res/layout/townlistheader.xml
@@ -3,26 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:id="@+id/firstline_container">
     <TextView
         android:id="@+id/firstline_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
         android:text="@string/grade_default_text"
-        android:textSize="16dp"
-        android:textColor="#FFFFFF"
-        android:textAlignment="center"
+        android:textSize="16sp"
+        android:textColor="#818181"
+        android:textAlignment="viewStart"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_toRightOf="@id/firstline_text_view"
+        android:layout_centerVertical="true"
+        android:gravity="end"
+        android:layout_marginRight="16dp"
+        android:id="@+id/share_button"
+        android:text="@string/share_button_text"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        android:textColor="#007AFF"/>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1px"
+        android:background="#9a9a9a"
+        android:layout_below="@id/firstline_container"
+        android:id="@+id/firstline_text_view_divider">
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:orientation="horizontal"
-        android:layout_marginTop="80dp"
-        android:layout_below="@id/firstline_text_view"
+        android:layout_below="@id/firstline_text_view_divider"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:orientation="vertical">
             <TextView
@@ -51,6 +77,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:orientation="vertical">
             <TextView
