--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,8 +40,8 @@
     <color name="common_bg_color1">#EFEFF4</color>
     <color name="common_bg_color2">#FFFFFF</color>
     <!-- MainFragment Fragment Color Resource-->
-    <color name="toolbar_bg_color">#9a9a9a</color>
-    <color name="toolbar_cnt_text_color">#00CCCC</color>
+    <color name="toolbar_bg_color">#f6f6f6</color>
+    <color name="toolbar_cnt_text_color">#4b4b4b</color>
     <color name="toolbar_second_text_color">#4b4b4b</color>
     <!-- MainFragment Fragment in Recycler View list Color Resource-->
     <color name="stamp_list_item_text_color_off">#000000</color>
