버전체크후 메인리스트갈때 한번씩 dlg.dismiss가 디스트로이 후 호출되서 죽는경우 수정 및 계정관리 작업

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,4 +56,5 @@
     <color name="stamp_list_item_text_color_alpha_off">#99000000</color>
     <color name="stamp_list_item_text_color_alpha_on">#99ffffff</color>
     <color name="text_dark_common">#818181</color>
+    <color name="account_accountmanage_password_input_hint_color">#9A9A9A</color>
 </resources>
