--- a/app/src/main/res/values-w820dp/colors.xml
+++ b/app/src/main/res/values-w820dp/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="image_description_contents_text_color">#000000</color>
+    <color name="account_accountmanage_password_input_hint_color">#9A9A9A</color>
 </resources>
