--- a/app/src/main/res/layout-v21/main_fragment.xml
+++ b/app/src/main/res/layout-v21/main_fragment.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    >
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -27,7 +28,9 @@
                 android:background="@color/toolbar_bg_color"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:contentDescription=""
+                tools:ignore="ContentDescription" />
             <include
                 android:id="@+id/top"
                 android:layout_width="match_parent"
@@ -65,7 +68,8 @@
                         android:id="@+id/hide_btn"
                         android:text="@string/hide_btn"
                         android:textSize="14sp"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        tools:ignore="RtlHardcoded" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -85,7 +89,8 @@
                         android:id="@+id/sort_btn"
                         android:text="@string/sort_btn"
                         android:textSize="14sp"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        tools:ignore="RelativeOverlap,RtlHardcoded" />
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
