--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:paddingTop="14dp">
+    android:id="@+id/map_container"
+    android:fitsSystemWindows="true"
+    >
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
