--- a/app/src/main/res/layout/more_fragment.xml
+++ b/app/src/main/res/layout/more_fragment.xml
@@ -2,12 +2,13 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="?attr/actionBarSize"
     android:background="@color/common_bg_color1"
     android:fitsSystemWindows="true">
+    <include layout="@layout/include_more_toolbar"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         android:scrollbarStyle="outsideOverlay">
         <LinearLayout
             android:layout_width="match_parent"
