jellanbin first commit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,9 @@
     <color name="user_stamp_cnt_textview_color">#9a9a9a</color>
     <color name="name_text_view">#000000</color>
     <color name="rankheader_bg">#f2f2f2</color>
+
+    <color name="account_accountmanage_password_input_textColor">#000</color>
+    <color name="btn_check_duplicate_color">#00c3e5</color>
+    <color name="btn_sendjoin_textColor">#ffffff</color>
+    <color name="social_join_confirm_textview_textColor">#666666</color>
 </resources>
