--- a/app/src/main/res/layout/activity_survey.xml
+++ b/app/src/main/res/layout/activity_survey.xml
@@ -8,11 +8,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:minHeight="600dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:orientation="vertical">
@@ -50,7 +51,7 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="35dp"
                 android:background="@color/alpha_background"
                 android:orientation="vertical">
@@ -66,6 +67,7 @@
                         android:layout_height="48dp"
                         android:buttonTint="@color/btn_check_duplicate_color"
                         android:textColor="#000000"
+                        android:textSize="16dp"
                         android:text="매우 만족"/>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -75,6 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:textColor="#000000"
+                        android:textSize="16dp"
                         android:buttonTint="@color/btn_check_duplicate_color"
                         android:text="만족"/>
                     <LinearLayout
@@ -85,6 +88,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:textColor="#000000"
+                        android:textSize="16dp"
                         android:buttonTint="@color/btn_check_duplicate_color"
                         android:text="보통"/>
                     <LinearLayout
@@ -95,6 +99,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:textColor="#000000"
+                        android:textSize="16dp"
                         android:buttonTint="@color/btn_check_duplicate_color"
                         android:text="불만족"/>
                     <LinearLayout
@@ -105,6 +110,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:textColor="#000000"
+                        android:textSize="16dp"
                         android:buttonTint="@color/btn_check_duplicate_color"
                         android:text="매우 불만족"/>
                     <LinearLayout
@@ -115,9 +121,13 @@
 
                 <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="150dp"
+                    android:padding="10dp"
                     android:gravity="center_vertical|top"
-                    android:text="기타의견을 입력하세요"
+                    android:background="@drawable/whitebox_edit"
+                    android:hint="기타의견을 입력하세요"
+                    android:textSize="16dp"
+                    android:textColorHint="#9a9a9a"
                     android:textColor="#000000"/>
             </LinearLayout>
         </LinearLayout>
