--- a/app/src/main/res/layout/include_common_toolbar.xml
+++ b/app/src/main/res/layout/include_common_toolbar.xml
@@ -9,13 +9,14 @@
         android:layout_height="?attr/actionBarSize"
         android:background="#f6f6f6">
         <ImageButton
-            android:layout_width="@dimen/toolbar_imgbtn_width"
-            android:layout_height="@dimen/toolbar_imgbtn_height"
-            android:layout_marginLeft="@dimen/toolbar_imgbtn_marginLeft"
-            android:layout_marginTop="@dimen/toolbar_imgbtn_marginTop"
-            android:background="@color/alpha_background"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="#00000000"
             android:src="@drawable/btn_back"
-            android:id="@+id/btn_close"
+            android:id="@+id/common_toolbar_back"
             />
 
         <TextView
@@ -29,15 +30,15 @@
             android:textSize="19sp" />
 
         <ImageButton
-            android:layout_width="@dimen/toolbar_imgbtn_width"
-            android:layout_height="@dimen/toolbar_imgbtn_height"
-            android:layout_marginLeft="@dimen/toolbar_imgbtn_marginRight"
-            android:layout_marginTop="@dimen/toolbar_imgbtn_marginTop"
-            android:background="@color/alpha_background"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_gravity="end"
+            android:background="#00000000"
             android:src="@drawable/btn_send"
-            android:foregroundGravity="right"
-            android:id="@+id/btn_submit"
-            />
+            android:id="@+id/coomm_toolbar_send"/>
 
     </android.support.v7.widget.Toolbar>
     <LinearLayout
